--- a/HTML BASICS/index.html
+++ b/HTML BASICS/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+
 <html>
+  <link rel="stylesheet" href="style.css">
   <body style="background-color: rgb(214, 212, 212)">
     <h1>HTML BASICS</h1>
     <h2>Sample code</h2>
